--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.google.gms.google.services)
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -42,6 +42,8 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation platform('com.google.firebase:firebase-bom:33.6.0')
+    implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.github.ismaeldivita:chip-navigation-bar:1.4.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
