--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.Travel"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.BookmarkActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.NotificationActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SecondActivity"
             android:exported="false" />
         <activity
