--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Travel"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.PaymentActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.BookmarkActivity"
             android:exported="false" />
         <activity
@@ -54,7 +57,5 @@
             </intent-filter>
         </activity>
     </application>
-
-
 
 </manifest>
